--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -501,7 +501,7 @@ form, [role="form"] {
     //
     // <div sf-checkbox>
     //     <input type="checkbox" id="checkbox4" name="checkbox">
-    //     <label for="checkbox4" data-off="off" data-on="on"></label>
+    //     <label for="checkbox4"><img src="/images/sf-toggle-unchecked.svg" /><img src="/images/sf-toggle-checked.svg" /></label>
     //     <span sf-checkbox-label onclick="$('#checkbox4').click();">Choice C</span>
     // </div>
     // --------------------------------------------------------------------
@@ -509,20 +509,6 @@ form, [role="form"] {
 
         position: relative;
         min-height: 1.7rem;
-
-        label:before {
-
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            -webkit-transition: 0.2s ease-in-out;
-            -moz-transition: 0.2s ease-in-out;
-            -o-transition: 0.2s ease-in-out;
-            transition: left 0.2s ease-in-out;
-            outline: none;
-            font-family: Helvetica Neue,helvetica,arial,verdana,sans-serif;
-        }
-
         margin: 0rem;
         overflow: visible;
 
@@ -539,76 +525,35 @@ form, [role="form"] {
 
         [sf-checkbox-label] {
 
-            padding-top: 0.2rem;
-            padding-left: 3.75rem;
             display: block;            
             cursor: pointer;
+            padding-top: 0.1rem;
+            padding-left: 3.5rem;
         }
 
-        label {
+        img {
 
             display: block;
             position: absolute;
-            top: 0.1rem;
-            left: 0.1rem;            
-            width: 2.75rem;
+            left: 0;
+            top: 0;
+            width: auto;
+            height: 1.6rem;
             padding: 0;
-            font-size: 0rem;
-            line-height: 0;
-            height: 1.5rem;
-            -webkit-border-radius: 0.75rem;
-            -moz-border-radius: 0.75rem;
-            border-radius: 0.75rem;
-            background: #e5e5e5;
             cursor: pointer;
-        }
 
-        label:before {
+            & + img {
 
-            content: '';
-            display: block;
-            position: absolute;
-            z-index: 1;
-            line-height: 1.4166rem;
-            text-indent: 1.6666rem;
-            height: 1rem;
-            width: 1rem;
-            -webkit-border-radius: 50%;
-            -moz-border-radius: 50%;
-            border-radius: 50%;
-            margin: auto 0;
-            top: 50%;
-            transform: translateY(-50%);
-            left: 0.25rem;
-            background: white;
-            box-shadow: rgba(221, 221, 221, 0.15) 0 0 0.4rem;
-        }
-
-        // CHECKBOX COLOR
-        [type="checkbox"]:checked + label {
-
-            background-color: rgba(19,191,17,1);
-        }
-
-        [type="checkbox"]:checked + label:before {
-
-            left: calc(100% - 1.25rem);
-            box-shadow: rgba(0, 0, 0, 0.15) 0 0 0.4rem;
-        }
-
-        [type="checkbox"] + label {
-
-            background-color: #dddddd;
+                display: none;
+            }
         }
 
         [type="checkbox"]:checked + label {
 
-            background-color: rgba(19,191,17,1);
-        }
+            img + img {
 
-        [type="checkbox"]:checked + label:after {
-
-            color: rgba(19,191,17,1);
+                display: block;
+            }
         }
     }
 
@@ -624,122 +569,77 @@ form, [role="form"] {
     // --------------------------------------------------------------------
     [sf-radio] {
 
+        overflow: visible;
+
+        input[type="radio"] {
+            display: none;
+        }
+
         label {
 
             display: inline-block;
             cursor: pointer;
-            padding-left: 3rem;
             font-size: 0;
             line-height: 1.2;
+            overflow: visible;
 
-            @include sf-internet-explorer-11() {
-
-                padding-left: 2rem;
+            i {
+                font-size: 1.2rem;
+                color: #c8c8c8;
             }
 
-            span:not([sf-wrapper]) {
+            & > i {
 
-                display: inline;
-                font-size: 1rem;
-                position: relative;
+                display: none;
+                color: var(--sf-color-success);
             }
 
-            [sf-wrapper] {
+            span.stack {
 
                 display: inline-block;
                 position: relative;
-                font-size: 0;
+                margin: 0;
+                height: 1.2rem;
+                width: 1.2rem;
+                line-height: 1.2rem;
                 vertical-align: top;
+                overflow: visible;
 
-                margin-left: -2.93rem;
-                margin-right: 0.75rem;
+                i {
 
-                background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-                background-color: var(--sf-color-check-background);
-                border: solid var(--sf-line-width) var(--sf-color-form-field-line);
-                border-radius: 0.65rem;
-                height: calc(1.4rem - var(--sf-line-width));
+                    display: inline-block;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
 
-                @include sf-media($from: tablet-portrait) {
+                    &:nth-of-type(1) {
 
-                    margin-right: 0.7rem;
-                    height: calc(1.4rem - var(--sf-line-width));
-                }
-
-                @include sf-internet-explorer-11() {
-
-                    top: 0.15rem;
-                    vertical-align: top;
-                    margin-left: -2rem;
-                    margin-right: 0;
-                    padding: 0;
-                    border: 0;
-                    border-radius: 0;
+                        color: #f8f8f8;
+                    }
                 }
             }
 
-            padding-left: 2.05rem;
+            [sf-radio-label] {
 
-            [sf-wrapper] {
+                display: inline-block;
+                padding-left: 0.5rem;
+                font-size: 1rem;
+                max-width: calc(100% - 1.2rem);
+            }
+        }
 
-                border: 0;
+        [type="radio"]:checked + label {
 
-                margin-left: -2.05rem;
-                margin-bottom: 0.1rem;
-                margin-right: 0.72rem;
+            & > i {
+
+                display: inline-block;
                 vertical-align: top;
+                line-height: 1.2rem;                
+            }
 
-                height: auto;
-                top: 0;
-                background-color: transparent;
+            span.stack {
 
-                @include sf-internet-explorer-11() {
-    
-                    margin-left: -2rem;
-                    margin-right: 0.75rem;
-                }
-
-                input[type="radio"] {
-
-                    display: inline-block;
-                    position: relative;
-
-                    -webkit-appearance: none;
-                    -moz-appearance: none;
-                    appearance: none;
-                    outline: none;
-
-                    vertical-align: text-top;
-                    width: 1.2rem;
-                    height: 1.2rem;
-                    margin-left: 0.08rem;
-
-                    font-size: 1rem;
-                    line-height: 1;
-
-                    background-color: white;
-                    border-radius: 50%;
-                    border: var(--sf-line-width) solid var(--sf-color-form-field-line);
-
-                    cursor: pointer;
-
-                    @include sf-microsoft-edge() {
-
-                        top: 0.08rem;
-                    }
-
-                    @include sf-media($from: tablet-landscape) {
-
-                        border-width: var(--sf-line-width);
-                    }
-
-                    &:checked {
-
-                        color: var(--sf-color-success);
-                        background-color: var(--sf-color-success);
-                        border-color: var(--sf-color-success);
-                    }
-                }
+                display: none;
             }
         }
     }
