Color page altered

--- a/styleguide/scss/core/_core-buttons.scss
+++ b/styleguide/scss/core/_core-buttons.scss
@@ -55,6 +55,6 @@ button, input[type="button"], input[type="submit"], input[type="cancel"], a[role
     &[disabled] {
 
         cursor: not-allowed;
-        opacity: .65;
+        opacity: 0.4;
     }
 }
