--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -183,7 +183,7 @@ button, input[type="button"], input[type="submit"], input[type="cancel"], a[role
 
 button:hover, button:focus, input[type="button"]:hover, input[type="button"]:focus, input[type="submit"]:hover, input[type="submit"]:focus, input[type="cancel"]:hover, input[type="cancel"]:focus, a[role="button"]:hover, a[role="button"]:focus { text-decoration: none; }
 
-button[disabled], input[type="button"][disabled], input[type="submit"][disabled], input[type="cancel"][disabled], a[role="button"][disabled] { cursor: not-allowed; opacity: .65; }
+button[disabled], input[type="button"][disabled], input[type="submit"][disabled], input[type="cancel"][disabled], a[role="button"][disabled] { cursor: not-allowed; opacity: 0.4; }
 
 button, input, optgroup, select, textarea, option { font-family: var(--font-body); }
 
