Started integrating new css grid system, new code sample pattern

--- a/styleguide/scss/_manifest.scss
+++ b/styleguide/scss/_manifest.scss
@@ -14,7 +14,7 @@
 @import "core/core-media-queries";
 @import "core/core-helpers";
 @import "core/core-initialize";
-@import "core/core-flexbox-grid";
+@import "core/core-css-grid";
 
 // CORE ELEMENT PARTIALS; DO NOT EDIT
 @import "core/core-animation";
