--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -50,7 +50,7 @@ body {
 
                         & > [sf-inner-wrapper] {
 
-                            padding-top: 1rem;
+                            padding-top: 0;
                         }
                     }
                 }
