--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -319,3 +319,13 @@ hr {
         }
     }
 }
+
+[sf-code] + p {
+
+    margin-top: var(--paragraph-bottom-margin);
+
+    &[sf-tight] {
+
+        margin-top: var(--paragraph-bottom-margin)/3;
+    }
+}
