Fixed p[sf-tight] calc

--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -74,7 +74,7 @@ p {
 
     &[sf-tight] {
 
-        margin-bottom: var(--paragraph-bottom-margin)/3;
+        margin-bottom: calc(var(--paragraph-bottom-margin)/3);
     }
 
     &:last-child {
